Fixed contact image formating to gracefully display on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -245,3 +245,10 @@
         }
     }
 }
+
+/* Contact Image */
+#contact-img {
+    @include media-query($on-palm) {
+        float: none;
+    }
+}
